--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="logo">
       <p>Mindn'Soul</p>
     </div>
+
     <nav class="top-nav">
       <ul>
         <li><a href="">Home</a></li>
@@ -23,9 +24,11 @@
         <li><a href="">Contact</a></li>
       </ul>
     </nav>
+
     <div class="site-title">
       <h1><span>welcome to</span> Mindn'Soul</h1>
     </div>
+    
     <div class="header-block-img">
       <img src="./images/header-img.jpg" alt="">
     </div>
@@ -45,15 +48,17 @@
         </div>
       </div>
     </section>
+
     <section class="gallery">
       <div class="wrapper">
-        <div class="gallery-imgs">
-          <img src="./images/gallery-img1.jpg" alt="">
-          <img src="./images/gallery-img2.jpg" alt="">
-          <img src="./images/gallery-img3.jpg" alt="">
-        </div>
+        <ul class="gallery-imgs">
+          <li><img src="./images/gallery-img1.jpg" alt=""></li>
+          <li><img src="./images/gallery-img2.jpg" alt=""></li>
+          <li><img src="./images/gallery-img3.jpg" alt=""></li>
+        </ul>
       </div>
     </section>
+
     <section class="about1">
       <div class="wrapper">
         <div class="about1-content">
@@ -65,6 +70,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
           </div>
         </div>
+
         <div class="about1-content">
           <div class="about1-icon">
             <a href=""><i class="fas fa-users"></i></a>
@@ -74,6 +80,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
           </div>
         </div>
+
         <div class="about1-content">
           <div class="about1-icon">
             <a href=""><i class="fas fa-file"></i></a>
@@ -83,6 +90,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
           </div>
         </div>
+
         <div class="about1-content">
           <div class="about1-icon">
             <a href=""><i class="fas fa-phone"></i></a>
@@ -94,22 +102,29 @@
         </div>
       </div>
     </section>
+
     <section class="about2">
       <div class="about2-content">
-        <img src="./images/about-img1.jpg" alt="">
+        <div class="about2-img">
+          <img src="./images/about-img1.jpg" alt="">
+        </div>
         <div class="about2-text">
           <h2>New Locations</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
         </div>
       </div>
+
       <div class="about2-content">
-        <img src="./images/about-img2.jpg" alt="">
+        <div class="about2-img">
+          <img src="./images/about-img2.jpg" alt="">
+        </div>
         <div class="about2-text">
           <h2>Group Programs</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
         </div>
       </div>
     </section>
+
     <section class="about3">
       <div class="about3-banner">
         <img src="./images/about-img3.jpg" alt="">
@@ -124,9 +139,7 @@
   <!-- main ends -->
   <!-- footer starts -->
   <footer>
-    <div class="copyright">
       <p>Copyright &copy; 2019 HackerYou</p>  
-    </div>
   </footer>
   <!-- footer ends -->
   
