--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 <body>
   <!-- header starts -->
   <header>
-    <div class="logo">
-      <p>Mindn'Soul</p>
-    </div>
+    <div class="top-bar">
+      <div class="logo">
+        <p>Mindn'Soul</p>
+      </div>
 
-    <nav class="top-nav">
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
-    </nav>
+      <nav class="top-nav">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
 
     <div class="site-title">
       <h1><span>welcome to</span> Mindn'Soul</h1>
