--- a/blog.html
+++ b/blog.html
@@ -46,10 +46,40 @@
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quidem incidunt facere iusto minima iste impedit explicabo. Voluptatibus, consequuntur perspiciatis.</p>
         </div>
       </div>
-    </section>
+      <div class="comments">
+        <h2>Comments:</h2>
+        <div class="comments-content">
+          <img src="./images/comment-img1.jpg" alt="">
+          <div class="comments-text">
+            <h3>Tuesday October 9th, 2019 by Davin</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate rerum aut assumenda nostrum molestias eos fugiat deleniti dolore, culpa, iure itaque asperiores impedit explicabo repellendus qui dolores nobis odio corporis?</p>
+          </div>
+        </div>
 
+        <div class="comments-content">
+          <img src="./images/comment-img2.jpg" alt="">
+          <div class="comments-text">
+            <h3>Wednesday October 10th, 2019 by Lisa</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga cumque maxime hic? Maxime dolor non recusandae, animi minima illum magni?</p>
+          </div>
+        </div>
+      </div>
+
+      <form action="">
+        <fieldset>
+          <label for="name">Name</label>
+          <input type="text" name="" id="name" placeholder="Name">
+          <label for="email">Email address</label>
+          <input type="email" name="" id="email" placeholder="Email address">
+          <label for="comment">Comment</label>
+          <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment"></textarea>
+          <button type="submit">Post Comment</button>
+        </fieldset>
+      </form>
+    </section>
   </main>
   <!-- main ends -->
+  <!-- aside starts -->
   
 </body>
 </html>
