--- a/blog.html
+++ b/blog.html
@@ -80,6 +80,25 @@
   </main>
   <!-- main ends -->
   <!-- aside starts -->
-  
+  <aside>
+    <div class="aside-content">
+      <img src="./images/aside-img.jpg" alt="">
+      <h3>Our mission</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, optio?</p>
+      <h3>Recent posts</h3>
+      <ul>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit.</li>
+      </ul>
+    </div>
+  </aside>
+  <!-- aside ends -->
+  <!-- footer starts -->
+  <footer>
+    <p>Copyright &copy; 2019 HackerYou</p>  
+  </footer>
+  <!-- footer ends -->
 </body>
 </html>
