finished contact page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mindn'Soul</title>
+  <title>Mindn'Soul - Home</title>
   <!-- external stylesheet -->
   <link rel="stylesheet" href="styles/style.css">
   <!-- google fonts -->
