--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
 
     <div class="site-title">
-      <h1><span>welcome to</span> Mindn'Soul</h1>
+      <p>welcome to</p>
+      <h1>Mindn'Soul</h1>
     </div>
     
     <div class="header-block-img">
