added links-button partial

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <div class="about2-text">
           <h2>New Locations</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
+          <a href="">Read More</a>
         </div>
       </div>
 
@@ -124,6 +125,7 @@
         <div class="about2-text">
           <h2>Group Programs</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
+          <a href="">Read More</a>
         </div>
       </div>
     </section>
