--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="wrapper">
         <div class="about1-content">
           <div class="about1-icon">
-            <a href=""><i class="fas fa-home"></i></a>
+            <i class="fas fa-home"></i>
           </div>
           <div class="about1-text">
             <h2>Customized Offers</h2>
@@ -76,7 +76,7 @@
 
         <div class="about1-content">
           <div class="about1-icon">
-            <a href=""><i class="fas fa-users"></i></a>
+            <i class="fas fa-users"></i>
           </div>
           <div class="about1-text">
             <h2>Community</h2>
@@ -86,7 +86,7 @@
 
         <div class="about1-content">
           <div class="about1-icon">
-            <a href=""><i class="fas fa-file"></i></a>
+            <i class="fas fa-file"></i>
           </div>
           <div class="about1-text">
             <h2>Blog</h2>
@@ -96,7 +96,7 @@
 
         <div class="about1-content">
           <div class="about1-icon">
-            <a href=""><i class="fas fa-phone"></i></a>
+            <i class="fas fa-phone"></i>
           </div>
           <div class="about1-text">
             <h2>Get in Touch</h2>
