--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       </div>
 
       <nav class="top-nav">
+        <form action="">
+          <input type="checkbox" id="mobile-menu">
+          <label for="mobile-menu" class="mobile-menu-label">
+            <i class="fas fa-bars"></i>
+          </label>
+        </form>
+        
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
@@ -28,8 +35,7 @@
     </div>
 
     <div class="site-title">
-      <p>welcome to</p>
-      <h1>Mindn'Soul</h1>
+      <h1><span>welcome to</span> Mindn'Soul</h1>
     </div>
     
     <div class="header-block-img">
