--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,10 @@
       </div>
 
       <nav class="top-nav">
+        <label for="mobile-menu" class="mobile-menu-label">&#9776;</label>
+        <input type="checkbox" id="mobile-menu">
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="">About</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
