--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
       </div>
 
       <nav class="top-nav">
-        <form action="">
-          <input type="checkbox" id="mobile-menu">
-          <label for="mobile-menu" class="mobile-menu-label">
-            <i class="fas fa-bars"></i>
-          </label>
-        </form>
-        
+        <label for="mobile-menu" class="mobile-menu-label">&#9776;</label>
+        <input type="checkbox" id="mobile-menu">
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
