added box-shadow mixin

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="intro">
       <div class="wrapper">
         <div class="intro-txt">
-          <h2>New Adventure</h2>
+          <h2>New adventure</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, et adipisci vitae cupiditate enim cum tempore! Error, eum. Consectetur, recusandae? Asperiores enim nesciunt maxime facilis accusamus, velit et ab vitae eaque odio neque veniam, eveniet illo culpa nihil mollitia aliquid!</p>
           <a href="">Find Out More</a>
         </div> 
