added blog post

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!-- header starts -->
-  <header>
+  <header class="blog-header">
     <div class="top-bar">
       <div class="logo">
         <p>Mindn'Soul</p>
@@ -79,24 +79,23 @@
         </fieldset>
       </form>
     </section>
+
+    <aside>
+      <div class="aside-content">
+        <img src="./images/aside-img.jpg" alt="">
+        <h3>Our mission</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, optio?</p>
+        <h3>Recent posts</h3>
+        <ul>
+          <li>Lorem ipsum dolor sit.</li>
+          <li>Lorem ipsum dolor sit.</li>
+          <li>Lorem ipsum dolor sit.</li>
+          <li>Lorem ipsum dolor sit.</li>
+        </ul>
+      </div>
+    </aside>
   </main>
   <!-- main ends -->
-  <!-- aside starts -->
-  <aside>
-    <div class="aside-content">
-      <img src="./images/aside-img.jpg" alt="">
-      <h3>Our mission</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, optio?</p>
-      <h3>Recent posts</h3>
-      <ul>
-        <li>Lorem ipsum dolor sit.</li>
-        <li>Lorem ipsum dolor sit.</li>
-        <li>Lorem ipsum dolor sit.</li>
-        <li>Lorem ipsum dolor sit.</li>
-      </ul>
-    </div>
-  </aside>
-  <!-- aside ends -->
   <!-- footer starts -->
   <footer>
     <p>Copyright &copy; 2019 HackerYou</p>  
