--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!-- header starts -->
-  <header>
+  <header class="home-header">
     <div class="top-bar">
       <div class="logo">
         <p>Mindn'Soul</p>
