--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,9 @@
       <div class="comments">
         <h2>Comments:</h2>
         <div class="comments-content">
-          <img src="./images/comment-img1.jpg" alt="">
+          <div class="comments-img">
+            <img src="./images/comment-img1.jpg" alt="">
+          </div>
           <div class="comments-text">
             <h3>Tuesday October 9th, 2019 by Davin</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate rerum aut assumenda nostrum molestias eos fugiat deleniti dolore, culpa, iure itaque asperiores impedit explicabo repellendus qui dolores nobis odio corporis?</p>
@@ -59,7 +61,9 @@
         </div>
 
         <div class="comments-content">
-          <img src="./images/comment-img2.jpg" alt="">
+          <div class="comments-img">
+            <img src="./images/comment-img2.jpg" alt="">
+          </div>
           <div class="comments-text">
             <h3>Wednesday October 10th, 2019 by Lisa</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga cumque maxime hic? Maxime dolor non recusandae, animi minima illum magni?</p>
