finished form css

--- a/blog.html
+++ b/blog.html
@@ -73,12 +73,12 @@
 
       <form action="">
         <fieldset>
-          <label for="name">Name</label>
+          <label for="name" class="visually-hidden">Name</label>
           <input type="text" name="" id="name" placeholder="Name">
-          <label for="email">Email address</label>
+          <label for="email" class="visually-hidden">Email address</label>
           <input type="email" name="" id="email" placeholder="Email address">
-          <label for="comment">Comment</label>
-          <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment"></textarea>
+          <label for="comment" class="visually-hidden">Comment</label>
+          <textarea name="" id="comment" placeholder="Comment"></textarea>
           <button type="submit">Post Comment</button>
         </fieldset>
       </form>
