--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <nav class="top-nav">
-        <label for="mobile-menu" class="mobile-menu-label">&#9776;</label>
+        <label for="mobile-menu" class="mobile-menu-label"><span class="visually-hidden">View drop down menu</span>&#9776;</label>
         <input type="checkbox" id="mobile-menu">
         <ul>
           <li><a href="">Home</a></li>
