--- a/contact.html
+++ b/contact.html
@@ -32,35 +32,42 @@
     <h1>Get in Touch</h1>
   </header>
   <!-- header ends -->
-  <!-- form starts -->
-  <form action="" class="contact-form">
-    <fieldset class="contact-fieldset">
-      <label for="name" class="visually-hidden">Name</label>
-      <input type="text" name="" id="name" placeholder="Name">
-      <label for="email" class="visually-hidden">Email address</label>
-      <input type="email" name="" id="email" placeholder="Email address">
-      <label for="comment" class="visually-hidden">Comment</label>
-      <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment"></textarea>
-      <button type="submit">Submit</button>
-    </fieldset>
-  </form>
-  <!-- form ends -->
+  <!-- main starts -->
+  <main>
+    <!-- form starts -->
+    <form action="" class="contact-form">
+      <fieldset class="contact-fieldset">
+        <label for="name" class="visually-hidden">Name</label>
+        <input type="text" name="" id="name" placeholder="Name">
+        <label for="email" class="visually-hidden">Email address</label>
+        <input type="email" name="" id="email" placeholder="Email address">
+        <label for="comment" class="visually-hidden">Comment</label>
+        <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment"></textarea>
+        <button type="submit">Submit</button>
+      </fieldset>
+    </form>
+    <!-- form ends -->
+    <section>
+      <div class="contact-info">
+        <ul class="social-links">
+          <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+          <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+        </ul>
+        <address>
+          <p>info@email.com</p>
+          <p>123 - 456 -7890</p>
+          <p>123 Queen Street West,<br> Unit 10 <br> Toronto, Ontario <br> M5V2D5</p>
+        </address>
+      </div>
+    </section>
+  </main>
+  <!-- main ends -->
+
   <!-- footer starts -->
   <footer>
-    <ul class="social-links">
-      <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href=""><i class="fab fa-instagram"></i></a></li>
-      <li><a href=""><i class="fab fa-twitter"></i></a></li>
-      <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
-    </ul>
-    <address>
-      <p>info@email.com</p>
-      <p>123 - 456 -7890</p>
-      <p>123 Queen Street West,<br> Unit 10 <br> Toronto, Ontario <br> M5V2D5</p>
-    </address>
-    <div class="copyright">
-      <p>Copyright &copy; 2019 HackerYou</p> 
-    </div> 
+    <p>Copyright &copy; 2019 HackerYou</p> 
   </footer>
   <!-- footer ends -->
 
