linked logo to home

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <header class="contact-header">
     <div class="top-bar">
       <div class="logo">
-        <p>Mindn'Soul</p>
+        <a href="index.html">Mindn'Soul</a>
       </div>
 
       <nav class="top-nav">
