updated html code for accessibility

--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@
     <form action="" class="contact-form">
       <fieldset class="contact-fieldset">
         <label for="name" class="visually-hidden">Name</label>
-        <input type="text" name="" id="name" placeholder="Name">
+        <input type="text" name="" id="name" placeholder="Name" title="Name">
         <label for="email" class="visually-hidden">Email address</label>
-        <input type="email" name="" id="email" placeholder="Email address">
+        <input type="email" name="" id="email" placeholder="Email address" title="Email address">
         <label for="comment" class="visually-hidden">Comment</label>
-        <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment"></textarea>
+        <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment" title="Comment"></textarea>
         <button type="submit">Submit</button>
       </fieldset>
     </form>
@@ -50,10 +50,10 @@
     <section>
       <div class="contact-info">
         <ul class="social-links">
-          <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href=""><i class="fab fa-instagram"></i></a></li>
-          <li><a href=""><i class="fab fa-twitter"></i></a></li>
-          <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+          <li><a href="" aria-label="Visit facebook page"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="" aria-label="Visit instagram page"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="" aria-label="Visit twitter page"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="" aria-label="Contact on whatsapp"><i class="fab fa-whatsapp"></i></a></li>
         </ul>
         <address>
           <p>info@email.com</p>
@@ -64,7 +64,6 @@
     </section>
   </main>
   <!-- main ends -->
-
   <!-- footer starts -->
   <footer>
     <p>Copyright &copy; 2019 HackerYou</p> 
