--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     
     <div class="header-block-img">
-      <img src="./images/header-img.jpg" alt="">
+      <img src="./images/header-img.jpg" alt="A black and white photo of a silhouette of a woman meditating">
     </div>
   </header>
   <!-- header ends -->
@@ -48,7 +48,7 @@
           <a href="">Find Out More</a>
         </div> 
         <div class="intro-img">
-          <img src="./images/intro-img.jpg" alt="">
+          <img src="./images/intro-img.jpg" alt="A row of women doing a yoga pose">
         </div>
       </div>
     </section>
@@ -56,9 +56,9 @@
     <section class="gallery">
       <div class="wrapper">
         <ul class="gallery-imgs">
-          <li><img src="./images/gallery-img1.jpg" alt=""></li>
-          <li><img src="./images/gallery-img2.jpg" alt=""></li>
-          <li><img src="./images/gallery-img3.jpg" alt=""></li>
+          <li><img src="./images/gallery-img1.jpg" alt="A woman balancing on her head with legs crossed above"></li>
+          <li><img src="./images/gallery-img2.jpg" alt="A man lying on his back lifting a woman with both hands and feet"></li>
+          <li><img src="./images/gallery-img3.jpg" alt="A woman sitting crossed-legged on the beach looking out to the waves"></li>
         </ul>
       </div>
     </section>
@@ -110,7 +110,7 @@
     <section class="about2">
       <div class="about2-content">
         <div class="about2-img">
-          <img src="./images/about-img1.jpg" alt="">
+          <img src="./images/about-img1.jpg" alt="Three women in active wear smiling at each other">
         </div>
         <div class="about2-text">
           <h2>New Locations</h2>
@@ -121,7 +121,7 @@
 
       <div class="about2-content">
         <div class="about2-img">
-          <img src="./images/about-img2.jpg" alt="">
+          <img src="./images/about-img2.jpg" alt="A man balancing on his two arms with his body parallel to the ground">
         </div>
         <div class="about2-text">
           <h2>Group Programs</h2>
@@ -133,7 +133,7 @@
 
     <section class="about3">
       <div class="about3-banner">
-        <img src="./images/about-img3.jpg" alt="">
+        <img src="./images/about-img3.jpg" alt="Five women on the beach with both arms stretched up balancing on one foot">
       </div>
       <div class="about3-content">
         <h2>Free Trials</h2>
