added scroll up button

--- a/blog.html
+++ b/blog.html
@@ -105,5 +105,8 @@
     <p>Copyright &copy; 2019 HackerYou</p>  
   </footer>
   <!-- footer ends -->
+
+  <!-- scroll up button -->
+  <a href="#top" class="scroll-up-btn" title="Back to top"><span class="visually-hidden">Back to top</span>&#9650;</a>
 </body>
 </html>
