--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- header starts -->
   <header class="home-header">
-    <div class="top-bar">
+    <div class="top-bar" id="#top">
       <div class="logo">
         <a href="index.html">Mindn'Soul</a>
       </div>
@@ -148,6 +148,9 @@
       <p>Copyright &copy; 2019 HackerYou</p>  
   </footer>
   <!-- footer ends -->
+
+  <!-- scroll up button -->
+  <a href="#top" class="scroll-up-btn" title="Back to top"><span class="visually-hidden">Back to top</span>&#9650;</a>
   
   <!-- font awesome script -->
   <script src="https://kit.fontawesome.com/f66c1e0420.js" crossorigin="anonymous"></script>
