updated desktop layout

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       </nav>
     </div>
 
-    <div class="site-title">
-      <h1><span>welcome to</span> Mindn'Soul</h1>
-    </div>
-    
-    <div class="header-block-img">
-      <img src="./images/header-img.jpg" alt="A black and white photo of a silhouette of a woman meditating">
+    <div class="header-content">
+      <div class="site-title">
+        <h1><span>welcome to</span> Mindn'Soul</h1>
+      </div>
+      <div class="header-block-img">
+        <img src="./images/header-img.jpg" alt="A black and white photo of a silhouette of a woman meditating">
+      </div>
     </div>
   </header>
   <!-- header ends -->
