--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
   <main>
     <section class="intro">
       <div class="wrapper">
-        <div class="intro-txt">
-          <h2>New adventure</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, et adipisci vitae cupiditate enim cum tempore! Error, eum. Consectetur, recusandae? Asperiores enim nesciunt maxime facilis accusamus, velit et ab vitae eaque odio neque veniam, eveniet illo culpa nihil mollitia aliquid!</p>
-          <a href="">Find Out More</a>
-        </div> 
-        <div class="intro-img">
-          <img src="./images/intro-img.jpg" alt="A row of women doing a yoga pose">
+        <div class="intro-content">
+          <div class="intro-txt">
+            <h2>New adventure</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, et adipisci vitae cupiditate enim cum tempore! Error, eum. Consectetur, recusandae? Asperiores enim nesciunt maxime facilis accusamus, velit et ab vitae eaque odio neque veniam, eveniet illo culpa nihil mollitia aliquid!</p>
+            <a href="">Find Out More</a>
+          </div> 
+          <div class="intro-img">
+            <img src="./images/intro-img.jpg" alt="A row of women doing a yoga pose">
+          </div>
         </div>
       </div>
     </section>
@@ -66,68 +68,72 @@
 
     <section class="about1">
       <div class="wrapper">
-        <div class="about1-content">
-          <div class="about1-icon">
-            <i class="fas fa-home"></i>
+        <div class="about1-contents-container">
+          <div class="about1-content">
+            <div class="about1-icon">
+              <i class="fas fa-home"></i>
+            </div>
+            <div class="about1-text">
+              <h2>Customized Offers</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
+            </div>
           </div>
-          <div class="about1-text">
-            <h2>Customized Offers</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
-          </div>
-        </div>
 
-        <div class="about1-content">
-          <div class="about1-icon">
-            <i class="fas fa-users"></i>
+          <div class="about1-content">
+            <div class="about1-icon">
+              <i class="fas fa-users"></i>
+            </div>
+            <div class="about1-text">
+              <h2>Community</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
+            </div>
           </div>
-          <div class="about1-text">
-            <h2>Community</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
-          </div>
-        </div>
 
-        <div class="about1-content">
-          <div class="about1-icon">
-            <i class="fas fa-file"></i>
+          <div class="about1-content">
+            <div class="about1-icon">
+              <i class="fas fa-file"></i>
+            </div>
+            <div class="about1-text">
+              <h2>Blog</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
+            </div>
           </div>
-          <div class="about1-text">
-            <h2>Blog</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
-          </div>
-        </div>
 
-        <div class="about1-content">
-          <div class="about1-icon">
-            <i class="fas fa-phone"></i>
-          </div>
-          <div class="about1-text">
-            <h2>Get in Touch</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
+          <div class="about1-content">
+            <div class="about1-icon">
+              <i class="fas fa-phone"></i>
+            </div>
+            <div class="about1-text">
+              <h2>Get in Touch</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora ipsum repellat quos facilis natus qui est corrupti laudantium velit.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <section class="about2">
-      <div class="about2-content">
-        <div class="about2-img">
-          <img src="./images/about-img1.jpg" alt="Three women in active wear smiling at each other">
+      <div class="about2-contents-container">
+        <div class="about2-content">
+          <div class="about2-img">
+            <img src="./images/about-img1.jpg" alt="Three women in active wear smiling at each other">
+          </div>
+          <div class="about2-text">
+            <h2>New Locations</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
+            <a href="">Read More</a>
+          </div>
         </div>
-        <div class="about2-text">
-          <h2>New Locations</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
-          <a href="">Read More</a>
-        </div>
-      </div>
 
-      <div class="about2-content">
-        <div class="about2-img">
-          <img src="./images/about-img2.jpg" alt="A man balancing on his two arms with his body parallel to the ground">
-        </div>
-        <div class="about2-text">
-          <h2>Group Programs</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
-          <a href="">Read More</a>
+        <div class="about2-content">
+          <div class="about2-img">
+            <img src="./images/about-img2.jpg" alt="A man balancing on his two arms with his body parallel to the ground">
+          </div>
+          <div class="about2-text">
+            <h2>Group Programs</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facilis molestiae dolorem placeat excepturi? Fugiat et blanditiis quidem culpa. Ipsum?</p>
+            <a href="">Read More</a>
+          </div>
         </div>
       </div>
     </section>
