finished home desktop layout

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="intro-content">
           <div class="intro-txt">
             <h2>New adventure</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, et adipisci vitae cupiditate enim cum tempore! Error, eum. Consectetur, recusandae? Asperiores enim nesciunt maxime facilis accusamus, velit et ab vitae eaque odio neque veniam, eveniet illo culpa nihil mollitia aliquid!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, et adipisci vitae cupiditate enim cum tempore! Error, eum. Consectetur, recusandae? Asperiores enim nesciunt maxime facilis accusamus, velit et ab vitae eaque odio neque veniam, eveniet illo culpa nihil mollitia aliquid! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem consequatur quas commodi! Dolorum, rerum itaque voluptatibus natus eum praesentium commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit repellat laborum harum tenetur? Consectetur.</p>
             <a href="">Find Out More</a>
           </div> 
           <div class="intro-img">
