added class to blog form

--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-        <form action="">
+        <form action="" class="blog-form">
           <fieldset>
             <label for="name" class="visually-hidden">Name</label>
             <input type="text" name="" id="name" placeholder="Name" title="Name">
