updated  contact page desktop layout

--- a/contact.html
+++ b/contact.html
@@ -34,34 +34,36 @@
   <!-- header ends -->
   <!-- main starts -->
   <main>
+    <div class="contact-contents-container">
     <!-- form starts -->
-    <form action="" class="contact-form">
-      <fieldset class="contact-fieldset">
-        <label for="name" class="visually-hidden">Name</label>
-        <input type="text" name="" id="name" placeholder="Name" title="Name">
-        <label for="email" class="visually-hidden">Email address</label>
-        <input type="email" name="" id="email" placeholder="Email address" title="Email address">
-        <label for="comment" class="visually-hidden">Comment</label>
-        <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment" title="Comment"></textarea>
-        <button type="submit">Submit</button>
-      </fieldset>
-    </form>
-    <!-- form ends -->
-    <section>
-      <div class="contact-info">
-        <ul class="social-links">
-          <li><a href="" aria-label="Visit facebook page"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="" aria-label="Visit instagram page"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="" aria-label="Visit twitter page"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="" aria-label="Contact on whatsapp"><i class="fab fa-whatsapp"></i></a></li>
-        </ul>
-        <address>
-          <p>info@email.com</p>
-          <p>123 - 456 -7890</p>
-          <p>123 Queen Street West,<br> Unit 10 <br> Toronto, Ontario <br> M5V2D5</p>
-        </address>
-      </div>
-    </section>
+      <form action="" class="contact-form">
+        <fieldset class="contact-fieldset">
+          <label for="name" class="visually-hidden">Name</label>
+          <input type="text" name="" id="name" placeholder="Name" title="Name">
+          <label for="email" class="visually-hidden">Email address</label>
+          <input type="email" name="" id="email" placeholder="Email address" title="Email address">
+          <label for="comment" class="visually-hidden">Comment</label>
+          <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment" title="Comment"></textarea>
+          <button type="submit">Submit</button>
+        </fieldset>
+      </form>
+      <!-- form ends -->
+      <section>
+        <div class="contact-info">
+          <ul class="social-links">
+            <li><a href="" aria-label="Visit facebook page"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="" aria-label="Visit instagram page"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="" aria-label="Visit twitter page"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="" aria-label="Contact on whatsapp"><i class="fab fa-whatsapp"></i></a></li>
+          </ul>
+          <address>
+            <p>info@email.com</p>
+            <p>123 - 456 -7890</p>
+            <p>123 Queen Street West,<br> Unit 10 <br> Toronto, Ontario <br> M5V2D5</p>
+          </address>
+        </div>
+      </section>
+    </div>
   </main>
   <!-- main ends -->
   <!-- footer starts -->
