finished contact page desktop layout

--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
           <input type="text" name="" id="name" placeholder="Name" title="Name">
           <label for="email" class="visually-hidden">Email address</label>
           <input type="email" name="" id="email" placeholder="Email address" title="Email address">
-          <label for="comment" class="visually-hidden">Comment</label>
-          <textarea name="" id="comment" cols="30" rows="10" placeholder="Comment" title="Comment"></textarea>
+          <label for="message" class="visually-hidden">Message</label>
+          <textarea name="" id="message" cols="30" rows="10" placeholder="Message" title="Message"></textarea>
           <button type="submit">Submit</button>
         </fieldset>
       </form>
