added wrapper to top bar

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
   <!-- header starts -->
   <header class="contact-header">
-    <div class="top-bar">
+    <div class="top-bar wrapper">
       <div class="logo">
         <a href="index.html">Mindn'Soul</a>
       </div>
