--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- header starts -->
   <header class="home-header">
-    <div class="top-bar" id="#top">
+    <div class="top-bar wrapper" id="#top">
       <div class="logo">
         <a href="index.html">Mindn'Soul</a>
       </div>
